--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "wallet",
     "version": "0.0.1",
     "scripts": {
-        "dev": "vite dev",
+        "dev": "vite dev --port 5173",
         "build": "vite build",
         "package": "svelte-kit package",
         "preview": "vite preview",
